Fixed UI bug with linear-gradient on Safari. Added translation noOptionText

--- a/src/components/Logo/index.scss
+++ b/src/components/Logo/index.scss
@@ -5,8 +5,11 @@
   width: 100%;
   padding: 0 20px;
   color: #B4CD93;
-  background: linear-gradient(99.32deg, #B4CD93 7.91%, #427A5B 88.96%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  h3{
+    display: inline-block;
+    background: linear-gradient(99.32deg, #B4CD93 7.91%, #427A5B 88.96%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+  }
 }
